Add Forge 1.20.1 edition and publish platform-labeled builds